samples/_failures_safe/1761789901_a49c02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cdb3225.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_0cdb3225.c:126:13: error: expected expression at end of input
  126 |             if (
      |             ^~
./samples/SAFE/__tmp_0cdb3225.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cdb3225.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cdb3225.c:126:13: error: expected declaration or statement at end of input
